REF - 불필요한 코드 및 API 엔드포인트 삭제