@@ -2,14 +2,15 @@ package com.hsk.cafeteria.service;
 
 import com.hsk.cafeteria.converter.MenuConverter;
 import com.hsk.cafeteria.dto.res.MenuRes;
+import com.hsk.cafeteria.entity.enums.CafeteriaType;
 import com.hsk.cafeteria.repository.MenuRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.awt.*;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,24 +19,19 @@ public class MenuServiceImpl implements MenuService {
     
     private final MenuRepository menuRepository;
     
-    public List<MenuRes> getMenusByCafeteriaAndDate(Long cafeteriaId, LocalDate date) {
-        return menuRepository.findByCafeteriaIdAndMenuDateOrderByMealType(cafeteriaId, date)
+    public List<MenuRes> getStudentMenus() {
+        return menuRepository.findByCafeteriaType(CafeteriaType.STUDENT)
                 .stream()
                 .map(MenuConverter::from)
-                .collect(Collectors.toList());
+                .toList();
     }
     
     public List<MenuRes> getMenusByDate(LocalDate date) {
         return menuRepository.findAllByDateWithCafeteria(date)
                 .stream()
                 .map(MenuConverter::from)
-                .collect(Collectors.toList());
+                .toList();
+
     }
     
-    public List<MenuRes> getMenusByCafeteria(Long cafeteriaId) {
-        return menuRepository.findByCafeteriaIdOrderByMenuDateDescMealTypeAsc(cafeteriaId)
-                .stream()
-                .map(MenuConverter::from)
-                .collect(Collectors.toList());
-    }
 }
